--- a/XUnitTests/XUnitTests.csproj
+++ b/XUnitTests/XUnitTests.csproj
@@ -6,6 +6,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.15" />
@@ -22,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Inventory.Models\Inventory.Models.csproj" />
     <ProjectReference Include="..\InventoryWebAPI\InventoryWebAPI.csproj" />
     <ProjectReference Include="..\SGTIN.Handler\SGTIN.Handler.csproj" />
   </ItemGroup>
